--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "discord.js": "^14.11.0",
     "google-map-react": "^2.2.1",
     "json-server": "^0.17.3",
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.3.0",
     "swiper-react": "^1.0.0",
